--- a/WebContent/res/css/webflow.css
+++ b/WebContent/res/css/webflow.css
@@ -39,6 +39,7 @@ html {
 }
 body {
   margin: 0;
+
   min-height: 100%;
   background-color: #fff;
   color: #333;
@@ -249,9 +250,9 @@ textarea.w-select {
   margin-top: 3px;
 }
 .w-container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 940px;
+  padding-right:30px;
+  padding-left:30px;
+  margin:0 auto;
 }
 .w-container:before,
 .w-container:after {
